# ict-backend

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
private/: exists.html  forbidden.html
public/: contact.html  contact.md  create.html  editor.html  footer.html  head.html  impressum.html  impressum.md  index.html  index.md  login.html  template.html
public/account/: admin.html  editor.html  me.html
public/articles/: foobar.md  lorem-ipsum.md  template.html
public/frontend/: admin.js  circus-frontend.js  circus-frontend.wasm  cookies.js  editor.js  schedule.js  style.js
public/l10n/: de.ron  en.ron  pl.ron
public/style/: style.css
public/template/: footer.html  head.html  header.html  sidenav.html
src/: account.rs  auth.rs  error.rs  i18n.rs  main.rs  path.rs  template.rs  term.rs  web.rs
