[package]
name = "circus-backend"
version = "0.1.0"
authors = ["Szymon Walter <waltersz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
clap = "2.33"
futures = "0.3"
futures-util = "0.3"
actix-rt = "1.0"
actix-identity = "0.2"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5"
postgres-types = "0.1"
postgres-native-tls = "0.3"
pulldown-cmark = "0.7"
rust-argon2 = "0.8"
serde = "1.0"
serde_json = "1.0"
pancurses = "0.16"

[dependencies.actix-web]
version = "2.0"
features = ["secure-cookies", "rustls"]
